--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
             storePassword 'Keystore'
             keyAlias = 'Keystore'
             keyPassword 'Keystore'
-            storeFile file('/media/andrea/Folders/Android-Project/Keystores/petto.jks')
+            storeFile file('petto.jks')
         }
     }
     compileSdkVersion 29
@@ -30,6 +30,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -42,13 +43,16 @@ dependencies {
     implementation 'ckm.simple:simple_sql_provider_annotation:1.0.7'
     annotationProcessor 'ckm.simple:simple_sql_provider_processor:1.0.7'
 
-    implementation 'com.google.android.gms:play-services-ads:18.0.0'
-    implementation 'com.google.android.gms:play-services-measurement:17.0.0'
-    implementation 'com.google.android.gms:play-services-measurement-sdk:17.0.0'
+    implementation 'com.google.android.gms:play-services-ads:18.1.0'
+    implementation 'com.google.android.gms:play-services-measurement:17.0.1'
+    implementation 'com.google.android.gms:play-services-measurement-sdk:17.0.1'
 
     implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
 
     implementation 'com.github.karanvs:hiddenshot:v1.2'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
